# django02_sasazawa_17_230217

./: .gitignore  README.md  main.py  main_bk2.py  pyproject.toml  replit.nix  requirements.txt  scraping.py
green_csv/: exp_list_2023-01-09-18-16-01.csv  exp_list_2023-01-09-18-17-23.csv
scraping/: db.sqlite3
scraping/scraping/: settings.py  urls.py
scraping/scraping_app/: scraping.py  tests.py  views.py
scraping/templates/: frontpage.html
