[tool.poetry]
name = "repl_nix_django02sasazawa17230217"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
PyDrive = "^1.3.1"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
Django = "^4.1.7"
gspread = "^5.7.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
